--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-PORT=3306
-DB_HOST=127.0.0.1
-DB_USER=root
-DB_PASS=2546
+POSTGRES_ADDR=postgres://postgres:123@localhost:5432/postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=123
+POSTGRES_DB=postgres
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+JWT_SECRET=jwt_secretch
